--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ a:hover {
 }
 
 header {
-  background: #007acc;
+  background: black;
   color: #fff;
   text-align: center;
   padding: 2rem 0;
@@ -35,6 +35,7 @@ header p {
 
 /* Container */
 .container {
+  
   width: 90%;
   max-width: 1200px;
   margin: 2rem auto;
@@ -49,7 +50,7 @@ h2 {
 
 /* Skills Section */
 .skills-grid {
-  display: grid;
+  display: inline-flex;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 1rem;
 }
@@ -77,6 +78,17 @@ h2 {
   color: #007acc;
 }
 
+.education {
+  background: #fff;
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+  border-left: 4px solid #007acc;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+.education h3 {
+  margin-top: 0;
+  color: #007acc;
+}
 /* Projects Section */
 .projects-grid {
   display: grid;
